# cheats

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  hack.cpp  hack_apex.cpp  hack_apex.hpp  hack_civilization.cpp  hack_civilization.hpp  hack_speedrunners.cpp  hack_starcraft2.cpp  hack_starcraft2.hpp  inject.cpp  inject.h  inject_civilization.asm  inject_civilization.cpp  inject_civilization.h  inject_speedrunners.cpp  inject_starcraft2.asm  inject_starcraft2.c  main.cpp  speedrunners.cpp  speedrunners.h  speedrunners.ui
QtOverlay/: overlay.cpp  overlay.hpp  overlay.qml  overlay_data_interface.cpp  overlay_data_interface.hpp
Starcraft2/: Entity.cpp  Entity.hpp  GameContext.cpp  GameContext.hpp  Offsets.hpp  Overlay.cpp  Overlay.hpp  Process.cpp  Process.hpp  Starcraft2.cpp  Starcraft2.hpp
Starcraft2/inject/: data_interface.h  inject_offsets.c  inject_starcraft2.asm  inject_starcraft2.c
